trying to resolve the IOS issue with spacing

--- a/static/css/fbenevento.css
+++ b/static/css/fbenevento.css
@@ -310,8 +310,9 @@
     }
     
     .resume .resumeContent .resumeHeader{
-        width:100%;
+        width:50%;
         align-items: center;
+
     }
     
     .pageContainer .mainImage .intro-lead-in {
